[workspace]
members = [
    "packages/rust"
]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/logger"
repository = "https://github.com/puniyu/logger"
edition = "2024"
rust-version = "1.88.0"


[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true


