[package]
name = "puniyu_logger"
version = "0.7.3"
description = "puniyu, logger核心实现"
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/logger"
repository = "https://github.com/puniyu/logger"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
convert_case = "0.11.0"
jiff = "0.2.23"
logforth = { version = "0.29.1", features = ["starter-log"] }
owo-colors = "4.2.2"
strip-ansi-escapes = "0.2.0"
log = "0.4.29"




