[package]
name = "puniyu_logger"
version = "0.1.0"
description = "puniyu, logger核心实现"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["chrono", "fmt"] }
chrono = "0.4.41"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
chrono-tz = "0.10.4"
owo-colors = "4.2.2"
tracing-shared = "0.2.0"
convert_case = "0.10.0"
strip-ansi-escapes = "0.2.0"
