[package]
name = "puniyu_logger_ffi"
version = "0.1.0"
description = "puniyu logger 的 C FFI 接口导出"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
puniyu_logger = { path = "../puniyu_logger" }

[build-dependencies]
cbindgen = "0.29"
